tests/toylang/neg/000275_mutation.toylang
program a = { else a : bool; } .
